--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -17,6 +17,8 @@ RUN apt-get update && apt-get install -y pip python3
 RUN pip install pyspark pyarrow
 
 ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64/
+# In geval van Macs
+#ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-arm64/
 
 RUN curl -O https://dist.apache.org/repos/dist/release/hadoop/common/KEYS
 
